fix bullet contrast 5

--- a/assets/style.css
+++ b/assets/style.css
@@ -127,10 +127,8 @@ body {
 	padding: .5em;
 }
 
-
-
 .carousel-indicators [data-bs-target] {
-	background-color: yellow !important;
+	background-color: red !important;
 }
 
 .mg-prev, .mg-next {
